tests/checker/diagnostics/0002_core_and_int_01.ml.infer.expected
File "0002_core_and_int_01.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0002_core_and_int_01 is not a valid module name.

File "0002_core_and_int_01.ml", line 2, characters 16-17:
2 | let _ = true && 0
                    ^
Error: The constant 0 has type int but an expression was expected of type
         bool
